kube/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
  labels:
    app: fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi-container
          image: abeldevops1/kubernetes-devops-project_fastapi:latest
          ports:
            - containerPort: 80  # Mettez à jour le port du conteneur en 80
