kube/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  selector:
    app: fastapi
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000   # Utilisez le port 5000 du conteneur
  type: NodePort
