kube/pgadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
spec:
  rules:
    - host: pgadmin.examabel.cloudns.ph
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: pgadmin-service
                port:
                  number: 80
